add medication reminder

--- a/medhelper/src/scss/generic/_main.scss
+++ b/medhelper/src/scss/generic/_main.scss
@@ -2,3 +2,4 @@
 @import "../generic/_variables.scss";
 @import "../styles/_medication.scss";
 @import "../styles/_medicationlist.scss";
+@import "../styles/_medicationform.scss";
