--- a/medhelper/src/scss/styles/_medicationlist.scss
+++ b/medhelper/src/scss/styles/_medicationlist.scss
@@ -3,4 +3,48 @@
   padding: 0;
   margin: 0;
   width: 100%;
+
+  li {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #f0f0f0;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    transition: background-color 0.2s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #e0e0e0;
+    }
+
+    &.taken {
+      background-color: #d0d0d0;
+    }
+  }
+
+  .name {
+    font-size: 1.5rem;
+    margin: 0;
+  }
+
+  .dosage,
+  .frequency {
+    font-size: 1rem;
+    margin: 0;
+  }
+
+  .time {
+    font-size: 1rem;
+    margin: 0;
+    text-align: center;
+  }
+
+  .header {
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+  }
 }
