--- a/medhelper/src/scss/styles/_medicationform.scss
+++ b/medhelper/src/scss/styles/_medicationform.scss
@@ -51,17 +51,182 @@
     }
   }
 
-  @media screen and (min-width: 768px) {
-    flex-direction: row;
-    align-items: center;
-
-    & > div {
-      margin-bottom: 0;
-      margin-right: 1rem;
+  /* Extra small devices (older Phones) */
+  @media screen and (max-width: 410px) {
+    input,
+    select {
+      font-size: 0.8rem;
+      padding: 0.3rem;
     }
 
     .button-group {
-      margin-left: auto;
+      flex-direction: column;
+      justify-content: center;
+
+      button {
+        margin-left: 0;
+        margin-top: 0.5rem;
+        width: 100%;
+      }
+
+      .btn-primary,
+      .btn-secondary {
+        padding: 0.3rem 1rem;
+        font-size: 0.8rem;
+      }
+    }
+  }
+
+  /* Extra small devices (Phones) */
+  @media screen and (min-width: 411px) and (max-width: 576px) {
+    input,
+    select {
+      font-size: 0.9rem;
+      padding: 0.4rem;
+    }
+
+    .button-group {
+      flex-direction: column;
+      justify-content: center;
+
+      button {
+        margin-left: 0;
+        margin-top: 0.5rem;
+        width: 100%;
+      }
+
+      .btn-primary,
+      .btn-secondary {
+        padding: 0.4rem 1rem;
+        font-size: 0.9rem;
+      }
+    }
+  }
+
+  /* Small devices (Tablets) */
+  @media screen and (min-width: 577px) and (max-width: 768px) {
+    input,
+    select {
+      font-size: 1rem;
+      padding: 0.5rem;
+    }
+
+    .button-group {
+      flex-direction: column;
+      justify-content: center;
+
+      button {
+        margin-left: 0;
+        margin-top: 0.5rem;
+        width: 100%;
+      }
+
+      .btn-primary,
+      .btn-secondary {
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+      }
+    }
+  }
+  /* Medium devices (Desktops) */
+  @media screen and (min-width: 769px) and (max-width: 992px) {
+    input,
+    select {
+      font-size: 1rem;
+      padding: 0.5rem;
+    }
+
+    .button-group {
+      flex-direction: row;
+      justify-content: flex-end;
+
+      button {
+        margin-left: 1rem;
+        margin-top: 0;
+        width: auto;
+      }
+
+      .btn-primary,
+      .btn-secondary {
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+      }
+    }
+  }
+
+  /* Medium devices (Tablets) */
+  @media screen and (min-width: 577px) and (max-width: 768px) {
+    .add-medication-form {
+      label {
+        font-size: 0.9rem;
+      }
+
+      input,
+      select {
+        font-size: 0.9rem;
+        padding: 0.4rem;
+      }
+
+      .button-group button {
+        font-size: 0.9rem;
+      }
+    }
+  }
+
+  /* Large devices (Desktops) */
+  @media screen and (min-width: 769px) and (max-width: 992px) {
+    .add-medication-form {
+      label {
+        font-size: 1rem;
+      }
+
+      input,
+      select {
+        font-size: 1rem;
+        padding: 0.5rem;
+      }
+
+      .button-group button {
+        font-size: 1rem;
+      }
+    }
+  }
+
+  /* Extra large devices (Desktops) */
+  @media screen and (min-width: 993px) and (max-width: 1200px) {
+    .add-medication-form {
+      label {
+        font-size: 1.1rem;
+      }
+
+      input,
+      select {
+        font-size: 1.1rem;
+        padding: 0.6rem;
+      }
+
+      .button-group button {
+        font-size: 1.1rem;
+      }
+    }
+  }
+
+  /* Extra extra large devices (Desktops) */
+  @media screen and (min-width: 1201px) {
+    .add-medication-form {
+      label {
+        font-size: 1.2rem;
+      }
+
+      input,
+      select {
+        font-size: 1.2rem;
+        padding: 0.7rem;
+      }
+
+      .button-group button {
+        font-size: 1.2rem;
+      }
     }
   }
 }
