--- a/medhelper/src/scss/styles/_medication.scss
+++ b/medhelper/src/scss/styles/_medication.scss
@@ -8,12 +8,20 @@
   padding: 1rem;
   transition: background-color 0.2s ease-in-out;
 
+
+
   &.taken {
     background-color: #d0d0d0;
   }
 
+  .delete button {
+    padding: 0.75rem 1.2rem;
+    font-size: 1.2rem;
+  }
+
+
   .name {
-    font-size: 1.5rem;
+    font-size: 1.0rem;
     margin: 0;
   }
 
@@ -27,11 +35,20 @@
   .times-list {
     display: flex;
     flex-direction: column;
+    font-size: 1.2rem;
     gap: 0.5rem;
     margin: 0;
     padding: 0;
     list-style: none;
   }
+
+  input[type="checkbox"] {
+    transform: scale(1.5);
+    margin-right: 0.5rem;
+  }
+
+
+
 
   .taken {
     display: flex;
