--- a/medhelper/src/scss/styles/_medicationlist.scss
+++ b/medhelper/src/scss/styles/_medicationlist.scss
@@ -45,6 +45,24 @@
   text-align: center;
 }
 
+.name {
+  font-size: 1.5rem;
+  margin: 0;
+  font-weight: bold;
+}
+
+.dosage,
+.frequency {
+  font-size: 1rem;
+  margin: 0;
+}
+
+.times {
+  font-size: 1rem;
+  margin: 0;
+  text-align: left;
+}
+
 /* Extra small devices (Phones) */
 @media screen and (max-width: 576px) {
   .medication-list li {
