--- a/medhelper/src/scss/styles/_medication.scss
+++ b/medhelper/src/scss/styles/_medication.scss
@@ -14,6 +14,11 @@
     background-color: #d0d0d0;
   }
 
+  .time-entry,
+  .taken-entry {
+    display: inline-block; /* just added */
+  }
+
   .delete button {
     padding: 0.75rem 1.2rem;
     font-size: 1.2rem;
