login and register buttons

--- a/medhelper/src/scss/styles/_main.scss
+++ b/medhelper/src/scss/styles/_main.scss
@@ -3,3 +3,5 @@
 @import "_medication.scss";
 @import "_medicationlist.scss";
 @import "_medicationform.scss";
+@import "_login.scss";
+@import "_register.scss";
