--- a/medhelper/src/scss/styles/_medication.scss
+++ b/medhelper/src/scss/styles/_medication.scss
@@ -70,11 +70,11 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    background-color: #009688;
+    background-color: darkred;
     color: #fff;
     font-size: 1rem;
     &:hover {
-      background-color: darken(#009688, 5%);
+      background-color: darken(darkred, 5%);
     }
   }
 
